// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainMenu /> Matches the previous accepted snapshot with mobile=false. 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH hpvmtz"
  >
    <div
      style="width: 70px;"
    >
      <div>
        Fake Icon
      </div>
    </div>
    <div
      class="sc-ifAKCX ePtLCd"
    >
       
      <a
        class="sc-bdVaJa fthXlT"
        href="/test1"
      >
        Test 1
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test2"
      >
        Test 2
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test3"
      >
        Test 3
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test4"
      >
        Test 4
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test5"
      >
        Test 5
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MainMenu /> Matches the previous accepted snapshot with mobile=true. 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH hpvmtz"
  >
    <div
      style="width: 70px;"
    >
      <div>
        Fake Icon
      </div>
    </div>
    <div
      style="width: 100%; display: flex; flex-direction: row-reverse;"
    >
      <button
        class="sc-htpNat iTUDjS"
      >
        <div
          class="sc-bxivhb ePYhrE"
        >
          <svg
            height="40"
            id="icon"
            viewBox="0 0 40 40"
            width="40"
          >
            <rect
              class="line"
              fill="#363636"
              height="2"
              rx="1"
              transform="translate(0, 0) translate(NaN, NaN) scale(1, 1) translate(NaN, NaN) rotate(0, NaN, NaN) skewX(0) skewY(0) "
              width="34"
              x="4"
              y="10"
            />
            <rect
              class="line"
              fill="#363636"
              height="2"
              rx="1"
              transform="translate(0, 0) translate(NaN, NaN) scale(1, 1) translate(NaN, NaN) rotate(0, NaN, NaN) skewX(0) skewY(0) "
              width="28"
              x="4"
              y="21"
            />
            <rect
              class="line"
              fill="#363636"
              height="2"
              rx="1"
              transform="translate(0, 0) translate(NaN, NaN) scale(1, 1) translate(NaN, NaN) rotate(0, NaN, NaN) skewX(0) skewY(0) "
              width="34"
              x="4"
              y="34"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="sc-EHOje egcxrg"
      height="0px"
      opacity="0"
    >
      <a
        class="sc-bdVaJa fthXlT"
        href="/test1"
      >
        Test 1
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test2"
      >
        Test 2
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test3"
      >
        Test 3
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test4"
      >
        Test 4
      </a>
      <a
        class="sc-bdVaJa fthXlT"
        href="/test5"
      >
        Test 5
      </a>
    </div>
  </div>
</DocumentFragment>
`;
